Fix extra white spaces inside inline li

--- a/buttons.css
+++ b/buttons.css
@@ -6,7 +6,6 @@ body, html {
 ul {
   padding: 0;
   width: 100%;
-  min-width: 750px;
 }
 
 li {
@@ -17,15 +16,11 @@ a {
   outline: none;
   text-decoration: none;
   display: inline-block;
-  width: 18.5%;
+  width: 19.5%;
   margin-right: 0.625%;
   text-align: center;
   line-height: 3;
   color: black;
-}
-
-li:first-child a {
-  margin-left: 2.0%;
 }
 
 li:last-child a {
